Added graphical labels to the molecule buckets
# 0.00.05 (65776) Jul 12, 2012
Reaction arrow turns yellow when products are in the play area
Added initial version of bucket-molecule stacking
Added animation to buckets when dropped outside play area
Added in reaction models for the 2nd and 3rd reactions (kits)
Added developer option to allow atom labels rotate with the molecules
Removed brownian motion randomness, added in initial velocity
# 0.00.04 (65350) Jun 21, 2012
# 0.00.03 (64262) May 18, 2012
# 0.00.02 (64098) May 10, 2012
# 0.00.01 (64096) May 10, 2012